--- a/functions/package.json
+++ b/functions/package.json
@@ -2,8 +2,10 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "dependencies": {
+    "@google-cloud/storage": "^1.2.1",
+    "express": "^4.15.4",
     "firebase-admin": "^4.1.2",
-    "firebase-functions": "^0.5"
+    "firebase-functions": "^0.5.9"
   },
   "private": true
 }
