--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy": "npm run build --prod --aot && firebase deploy"
+    "deploy": "npm run build && firebase deploy"
   },
   "private": true,
   "dependencies": {
