--- a/src/assets/img/favicons/manifest.json
+++ b/src/assets/img/favicons/manifest.json
@@ -8,14 +8,14 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "\/android-chrome-192x192.png",
+      "src": "\/assets/img/favicons/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image\/png",
       "density": "4.0"
     },
     {
-      "src": "\/android-chrome-256x256.png",
-      "sizes": "144x144",
+      "src": "\/assets/img/favicons/android-chrome-256x256.png",
+      "sizes": "256x256",
       "type": "image\/png",
       "density": "3.0"
     }
